# vis

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  db.py  docker-compose.yaml  main.py  pdf.py  pyproject.toml  requirements.txt  scheduler.py  summarize.py  youtube.py
.claude/: settings.json
.claude/agents/: bug-scanner.md  code-reviewer.md  debugger.md  dispatcher.md  explorer.md  implementer.md  plan-reviewer.md  plan-validator.md  rea-router.md  security-scanner.md  skill-writer.md  spec-reviewer.md
.claude/commands/: rea-brainstorm.md  rea-commit.md  rea-execute.md  rea-init.md  rea-plan.md  rea-update.md  rea-verify.md  rea-worktree.md  rea-wrap.md  rea-write-skill.md
.claude/hooks/: post-tool-use.sh
.github/workflows/: ci.yml  claude-review.yml
.rea/: lessons.md
.rea/log/: 2026-03-24-2307-session-report-rewrite-rea-init.md  2026-03-24-2345-plan-channel-monitoring.md  2026-03-24-2355-session-channel-monitoring.md
.rea/plans/0001-channel-monitoring/: plan.md  spec.md  todo.md
docs/: plan.md  spec.md
src/vis/: bot.py  config.py  db.py  main.py  pdf.py  report.py  scheduler.py  summarize.py  telegram.py  transcript.py  youtube.py
tests/: test_config.py  test_db.py  test_pdf.py  test_report.py  test_summarize.py  test_transcript.py
